--- a/sass/_destacado.scss
+++ b/sass/_destacado.scss
@@ -328,4 +328,12 @@ a{
     .hero__img img{
         width:100%;
     }
+    .discos__recientes{
+        display: flex;
+        justify-content: center;
+    }
+    .discos__antiguos{
+        display: flex;
+        justify-content: center;
+    }
 }
