--- a/css/styles.css
+++ b/css/styles.css
@@ -138,11 +138,15 @@ footer {
 .article img {
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  width: 80%;
 }
 .article p {
   color: whitesmoke;
   font-family: "Montserrat", sans-serif;
+}
+.article .article-iframe {
+  width: 100%;
+  height: 500px;
 }
 
 /*Galeria Css*/
