Converti las grillas de la galeria en responsive utilizando las mediaqueries(scss).Con esto el proyecto ya esta casi-finalizado

--- a/css/styles.css
+++ b/css/styles.css
@@ -377,4 +377,36 @@ a {
     display: flex;
     justify-content: center;
   }
+
+  .grid-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 0px 0px;
+    grid-template-areas: "grid__left" "grid__right" "grid__bottom";
+  }
+  .grid-container .grid__left {
+    grid-area: grid__left;
+    background-position-y: 20%;
+  }
+  .grid-container .grid__right {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 0px 0px;
+    grid-template-areas: "grid__rightTop" "grid__rightBottom";
+    grid-area: grid__right;
+  }
+  .grid-container .grid__rightBottom {
+    grid-area: grid__rightBottom;
+    background-position: 50%;
+  }
+  .grid-container .grid__rightTop {
+    grid-area: grid__rightTop;
+    background-position: 50%;
+  }
+  .grid-container .grid__bottom {
+    grid-area: grid__bottom;
+    background-position: 60%;
+  }
 }
